manifests/kubernetes-dashboard-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  labels:
    k8s-app: kubernetes-dashboard
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  rules:
    - host: k8s-dashboard.aws.opsgoodness.net
      http:
        paths:
          - path: /
            backend:
              serviceName: kubernetes-dashboard
              servicePort: 80
  tls:
    - hosts:
        - k8s-dashboard.aws.opsgoodness.net
      secretName: k8s-dashboard.aws.opsgoodness.net
